created a new training method

--- a/main-kaggle.ipynb
+++ b/main-kaggle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import AdaBoostRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from xgboost import XGBRegressor\n",
     "from sklearn.ensemble import ExtraTreesRegressor\n",
     "from sklearn.ensemble import VotingRegressor\n",
     "from sklearn.model_selection import cross_val_score\n",
@@ -24,7 +25,8 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn import preprocessing\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import copy as cp"
    ]
   },
   {
@@ -471,7 +473,6 @@
        "      <th>TotalBsmtSF</th>\n",
        "      <th>1stFlrSF</th>\n",
        "      <th>...</th>\n",
-       "      <th>WoodDeckSF</th>\n",
        "      <th>OpenPorchSF</th>\n",
        "      <th>EnclosedPorch</th>\n",
        "      <th>3SsnPorch</th>\n",
@@ -481,6 +482,7 @@
        "      <th>YrSold</th>\n",
        "      <th>LastRemod</th>\n",
        "      <th>UsableSF</th>\n",
+       "      <th>Overall</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -497,7 +499,6 @@
        "      <td>720.0</td>\n",
        "      <td>720</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
        "      <td>523</td>\n",
        "      <td>115</td>\n",
        "      <td>0</td>\n",
@@ -507,6 +508,7 @@
        "      <td>2009</td>\n",
        "      <td>30</td>\n",
        "      <td>720</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>916</th>\n",
@@ -527,10 +529,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>2006</td>\n",
        "      <td>1</td>\n",
        "      <td>480</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>968</th>\n",
@@ -551,10 +553,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>2009</td>\n",
        "      <td>40</td>\n",
        "      <td>968</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>533</th>\n",
@@ -575,10 +577,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>2007</td>\n",
        "      <td>4</td>\n",
        "      <td>334</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -593,7 +595,6 @@
        "      <td>649.0</td>\n",
        "      <td>649</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
        "      <td>54</td>\n",
        "      <td>172</td>\n",
        "      <td>0</td>\n",
@@ -603,10 +604,11 @@
        "      <td>2008</td>\n",
        "      <td>30</td>\n",
        "      <td>1317</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 32 columns</p>\n",
+       "<p>5 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -617,28 +619,28 @@
        "533         50.0     5000       1946          1950         0.0         0.0   \n",
        "30          50.0     8500       1920          1950         0.0         0.0   \n",
        "\n",
-       "     BsmtFinSF2  BsmtUnfSF  TotalBsmtSF  1stFlrSF  ...  WoodDeckSF  \\\n",
-       "495         0.0      225.0        720.0       720  ...           0   \n",
-       "916         0.0      430.0        480.0       480  ...           0   \n",
-       "968         0.0      600.0        600.0       600  ...           0   \n",
-       "533         0.0        0.0          0.0       334  ...           0   \n",
-       "30          0.0      649.0        649.0       649  ...           0   \n",
+       "     BsmtFinSF2  BsmtUnfSF  TotalBsmtSF  1stFlrSF  ...  OpenPorchSF  \\\n",
+       "495         0.0      225.0        720.0       720  ...          523   \n",
+       "916         0.0      430.0        480.0       480  ...            0   \n",
+       "968         0.0      600.0        600.0       600  ...            0   \n",
+       "533         0.0        0.0          0.0       334  ...            0   \n",
+       "30          0.0      649.0        649.0       649  ...           54   \n",
        "\n",
-       "     OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  PoolArea  MiscVal  \\\n",
-       "495          523            115          0            0         0        0   \n",
-       "916            0              0          0            0         0        0   \n",
-       "968            0              0          0            0         0        0   \n",
-       "533            0              0          0            0         0        0   \n",
-       "30            54            172          0            0         0        0   \n",
+       "     EnclosedPorch  3SsnPorch  ScreenPorch  PoolArea  MiscVal  YrSold  \\\n",
+       "495            115          0            0         0        0    2009   \n",
+       "916              0          0            0         0        0    2006   \n",
+       "968              0          0            0         0        0    2009   \n",
+       "533              0          0            0         0        0    2007   \n",
+       "30             172          0            0         0        0    2008   \n",
        "\n",
-       "     YrSold  LastRemod  UsableSF  \n",
-       "495    2009         30       720  \n",
-       "916    2006          1       480  \n",
-       "968    2009         40       968  \n",
-       "533    2007          4       334  \n",
-       "30     2008         30      1317  \n",
+       "     LastRemod  UsableSF  Overall  \n",
+       "495         30       720       20  \n",
+       "916          1       480        6  \n",
+       "968         40       968       18  \n",
+       "533          4       334        3  \n",
+       "30          30      1317       16  \n",
        "\n",
-       "[5 rows x 32 columns]"
+       "[5 rows x 33 columns]"
       ]
      },
      "execution_count": 13,
@@ -699,7 +701,7 @@
        "       'PavedDrive', 'WoodDeckSF', 'OpenPorchSF', 'EnclosedPorch', '3SsnPorch',\n",
        "       'ScreenPorch', 'PoolArea', 'PoolQC', 'Fence', 'MiscFeature', 'MiscVal',\n",
        "       'MoSold', 'YrSold', 'SaleType', 'SaleCondition', 'LastRemod',\n",
-       "       'UsableSF', 'LotFrontage_missing', 'MasVnrArea_missing',\n",
+       "       'UsableSF', 'Overall', 'LotFrontage_missing', 'MasVnrArea_missing',\n",
        "       'BsmtFinSF1_missing', 'BsmtFinSF2_missing', 'BsmtUnfSF_missing',\n",
        "       'TotalBsmtSF_missing', 'BsmtFullBath_missing', 'BsmtHalfBath_missing',\n",
        "       'GarageYrBlt_missing', 'GarageCars_missing', 'GarageArea_missing'],\n",
@@ -1232,16 +1234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2919, 224)"
+       "(2919, 225)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,16 +1308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((1168, 224), (1168, 1))"
+       "((1168, 225), (1168, 1))"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,16 +1357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1436845441669171"
+       "0.14256268654308704"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,16 +1381,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1407229875363053"
+       "0.13958881073807866"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,16 +1405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.13573922923848017"
+       "0.14313687004369183"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,16 +1429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.14628204076659135"
+       "0.14789522770831565"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,30 +1453,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12:37:52] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.13802010266274578"
+       "0.1406128638332093"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "xb =  XGBRegressor(n_estimators=400,n_jobs=-1, learning_rate=0.25)\n",
+    "xb.fit(X_train,y_train)\n",
+    "y_pred = xb.predict(X_valid)\n",
+    "r = rmse(y_valid,y_pred)\n",
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def res_learner(steps,X_train, y_train, X_valid, y_valid):\n",
+    "    models = []\n",
+    "    valid_scores = []\n",
+    "    y = []\n",
+    "    y.append(y_train)\n",
+    "    for step in range(steps):\n",
+    "        ab = AdaBoostRegressor(n_estimators=200, base_estimator=DecisionTreeRegressor())\n",
+    "        ab.fit(X_train,y[step])\n",
+    "        y_pred_train = ab.predict(X_train)\n",
+    "        y.append(y[step]-y_pred_train)\n",
+    "        models.append(ab)\n",
+    "        r = rmse()\n",
+    "        valid_scores.append()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ResLearner():\n",
+    "    def __init__(self,model, verbose=True):\n",
+    "        \n",
+    "        self.model = model\n",
+    "        self.steps = 0\n",
+    "        self.obj = []\n",
+    "        self.pred = []\n",
+    "        self.models = []\n",
+    "        self.train_scores = []\n",
+    "        self.valid_scores = []\n",
+    "        self.best_score = 0\n",
+    "        self.best_step = 0\n",
+    "        self.verbose = verbose\n",
+    "        \n",
+    "    def fit(self, steps, X_train, y_train, X_valid, y_valid):\n",
+    "        \n",
+    "        self.obj.append(y_train)\n",
+    "        self.steps = steps\n",
+    "        \n",
+    "        for step in range(steps):\n",
+    "            mdl = cp.copy(self.model)\n",
+    "            #mdl.n_estimators = self.model.n_estimators - (step*10)\n",
+    "            mdl.fit(X_train,self.obj[step])\n",
+    "            self.pred.append(mdl.predict(X_train))\n",
+    "            self.obj.append(self.obj[step]-self.pred[step])\n",
+    "            self.models.append(mdl)\n",
+    "            \n",
+    "            self.train_scores.append(rmse(self.predict(X_train),y_train))\n",
+    "            self.valid_scores.append(rmse(self.predict(X_valid),y_valid))\n",
+    "            \n",
+    "            if self.verbose:\n",
+    "                print('Step '+str(step)+': Train Score = '+str(self.train_scores[step]))\n",
+    "                print('Step '+str(step)+': Valid Score = '+str(self.valid_scores[step]))\n",
+    "                print('\\n')\n",
+    "            \n",
+    "        self.best_score = np.min(self.valid_scores)\n",
+    "        self.best_step = np.argmin(self.valid_scores)+1\n",
+    "\n",
+    "        \n",
+    "    def predict(self, X):\n",
+    "        y = np.zeros(X.shape[0])\n",
+    "        for model in self.models:\n",
+    "            y+= model.predict(X)\n",
+    "            \n",
+    "        return y  \n",
+    "    \n",
+    "    def plot_scores(self):\n",
+    "        plt.plot(range(self.steps),self.train_scores, self.valid_scores)\n",
+    "        plt.legend(['Train','Valid'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 0: Train Score = 0.08116452013715121\n",
+      "Step 0: Valid Score = 0.13797094614180833\n",
+      "\n",
+      "\n",
+      "Step 1: Train Score = 0.06303644927942176\n",
+      "Step 1: Valid Score = 0.13487323401331103\n",
+      "\n",
+      "\n",
+      "Step 2: Train Score = 0.05286483883223024\n",
+      "Step 2: Valid Score = 0.13446379701607994\n",
+      "\n",
+      "\n",
+      "Step 3: Train Score = 0.04571326452853685\n",
+      "Step 3: Valid Score = 0.13400487494518362\n",
+      "\n",
+      "\n",
+      "Step 4: Train Score = 0.03991168782332584\n",
+      "Step 4: Valid Score = 0.13345348537410254\n",
+      "\n",
+      "\n",
+      "Step 5: Train Score = 0.03505798124526609\n",
+      "Step 5: Valid Score = 0.13360517519880136\n",
+      "\n",
+      "\n",
+      "Step 6: Train Score = 0.031185662574676375\n",
+      "Step 6: Valid Score = 0.13317512955003052\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = ResLearner(XGBRegressor(n_estimators=100,n_jobs=-1,objective='reg:squarederror',learning_rate=0.1))\n",
+    "\n",
+    "res.fit(7, X_train, y_train, X_valid, y_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 0: Train Score = 0.10667910488694318\n",
+      "Step 0: Valid Score = 0.14999304848408304\n",
+      "\n",
+      "\n",
+      "Step 1: Train Score = 0.07610583980651284\n",
+      "Step 1: Valid Score = 0.14127095148546612\n",
+      "\n",
+      "\n",
+      "Step 2: Train Score = 0.061290528698969886\n",
+      "Step 2: Valid Score = 0.13996012409502717\n",
+      "\n",
+      "\n",
+      "Step 3: Train Score = 0.05157914638424814\n",
+      "Step 3: Valid Score = 0.13936423714061702\n",
+      "\n",
+      "\n",
+      "Step 4: Train Score = 0.04427696977985759\n",
+      "Step 4: Valid Score = 0.139116061892496\n",
+      "\n",
+      "\n",
+      "Step 5: Train Score = 0.03858218731637207\n",
+      "Step 5: Valid Score = 0.13865987203745508\n",
+      "\n",
+      "\n",
+      "Step 6: Train Score = 0.03404792083370447\n",
+      "Step 6: Valid Score = 0.1384492242133413\n",
+      "\n",
+      "\n",
+      "Step 7: Train Score = 0.030259252469152093\n",
+      "Step 7: Valid Score = 0.1381891035636789\n",
+      "\n",
+      "\n",
+      "Step 8: Train Score = 0.027092259364242203\n",
+      "Step 8: Valid Score = 0.13812063671344646\n",
+      "\n",
+      "\n",
+      "Step 9: Train Score = 0.02451444434211513\n",
+      "Step 9: Valid Score = 0.13807957031800241\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = ResLearner(RandomForestRegressor(n_estimators=1000, n_jobs=-1,min_samples_leaf=8))\n",
+    "res.fit(10, X_train, y_train, X_valid, y_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rf = RandomForestRegressor(n_estimators=100, n_jobs=-1,min_samples_leaf=3)\n",
     "ab = AdaBoostRegressor(n_estimators=100, base_estimator= DecisionTreeRegressor())\n",
     "gb = GradientBoostingRegressor(n_estimators=200,max_depth=5)\n",
     "et = ExtraTreesRegressor(n_estimators=200,n_jobs=-1,)\n",
-    "ens = VotingRegressor([('rf',rf),('ab',ab),('gb',gb),('et',et)])\n",
-    "ens.fit(X_train,y_train)\n",
-    "y_pred = ens.predict(X_valid)\n",
-    "r = rmse(y_valid,y_pred)\n",
-    "r"
+    "ens = VotingRegressor([('rf',rf),('ab',ab),('gb',gb),('et',et)])"
    ]
   },
   {
